# infer

./: .gitignore  INSTALL.md  build-infer.sh  configure.ac  old.sh  run-infer-c.sh  run-infer-py.sh  run-infer-rust-std.sh  run-infer-rust.sh  run-infer-textual.sh
infer/src/rust/unit/: README.md  RustMIR2TextualTest.ml  RustMir2TextualTest.ml  RustMir2TextualTestAggregates.ml  RustMir2TextualTestDeclarations.ml  RustMir2TextualTestOperands.ml  RustMir2TextualTestPointers.ml  RustMir2TextualTestRvalues.ml  RustMir2TextualTestStatements.ml  RustMir2TextualTestTerminators.ml  dune
infer/src/rust/unit/programs/: example.sil  example.ullbc
infer/src/rust/unit/programs/function/: RustMir2TextualTestFunction.ml  calls_and_temp.mir  calls_and_temp.rs  calls_and_temp.sil  calls_and_temp.ullbc  combined.rs  combined.sil  complex.mir  complex.sil  complex.ullbc
infer/src/rust/unit/programs/general/: RustMir2TextualTestGeneral.ml  after_lifetime.mir  after_lifetime.sil  after_lifetime.ullbc  null.mir  null.sil  null.ullbc  null_latent.mir  null_latent.sil  null_latent.ullbc  out_of_bounds.mir  out_of_bounds.rs  out_of_bounds.sil  out_of_bounds.ullbc
infer/src/rust/unit/programs/operands/: RustMir2TextualTestOperands.ml
infer/src/rust/unit/programs/operands/const/: literal_float.mir  literal_float.sil  literal_float.ullbc  literal_int.mir  literal_int.sil  literal_int.ullbc  literal_mixed.mir  literal_mixed.rs  (+7 more)
infer/src/rust/unit/programs/rvalues/: RustMir2TextualTestRvalues.ml
infer/src/rust/unit/programs/statements/: RustMir2TextualTestStatements.ml
infer/src/rust/unit/programs/terminators/: RustMir2TextualTestTerminators.ml
(+491 files in other folders)
